fixed misalignment issue with drawing on the canvas + fixed small css in button (step 2 complete)

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,8 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 12px;
 }
 
 #header {
@@ -11,10 +13,11 @@
 #cvs {
   width: 256px;
   height: 256px;
-  border: 1px, solid #000000;
+  border: 1px solid #000000;
   border-radius: 10px;
   filter: drop-shadow(1px 1px 1px black) drop-shadow(1px -1px 1px black)
     drop-shadow(-1px 1px 1px black) drop-shadow(-1px -1px 1px black);
+  display: block;
 }
 
 #clear-button {
